day9/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-web-service
spec:
  selector:
    app: static-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
