day9/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mystaticwebsite-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: "cookie"
spec:
  tls:
  - hosts:
    - anotherexample.com
    secretName: tls-secret
  rules:
  - host: anotherexample.com
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: mystaticwebsite-service
            port:
              number: 80
  - host: anotherexample.com
    http:
      paths:
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: mystaticwebsite-service
            port:
              number: 80
